<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="amountLabel">Amount</string>
    <string name="custom_tip_percentage">Custom %</string>
    <string name="fiften_percent" translatable="false">15%</string>
    <string name="eighteen_percent" translatable="false">18%</string>
    <string name="tip_label">Tip</string>
    <string name="total_label">Total</string>
</resources>
