<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:useDefaultMargins="true">

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:labelFor="@+id/amountEditText"
        android:text="@string/amountLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:ems="8"
        android:inputType="numberDecimal"
        android:maxLength="6" />

    <TextView
        android:id="@+id/amountDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:padding="@dimen/textview_padding"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/customPercentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:labelFor="@+id/customTipSeekBar"
        android:text="@string/custom_tip_percentage"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <SeekBar
        android:id="@+id/customTipSeekBar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:max="30"
        android:progress="18" />

    <LinearLayout
        android:id="@+id/percentLinearLayout"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/percent15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/fiften_percent"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:id="@+id/percentCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/eighteen_percent"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    </LinearLayout>

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:labelFor="@+id/customTipSeekBar"
        android:padding="@dimen/textview_padding"
        android:text="@string/tip_label"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <LinearLayout
        android:id="@+id/tipLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tip15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:background="?android:attr/colorPressedHighlight"
            android:padding="@dimen/textview_padding"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="?android:attr/colorPressedHighlight"
            android:padding="@dimen/textview_padding"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    </LinearLayout>

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:labelFor="@+id/customTipSeekBar"
        android:padding="@dimen/textview_padding"
        android:text="@string/total_label"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <LinearLayout
        android:id="@+id/totalLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/total15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:background="?android:attr/colorPressedHighlight"
            android:padding="@dimen/textview_padding"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="?android:attr/colorPressedHighlight"
            android:padding="@dimen/textview_padding"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    </LinearLayout>

</GridLayout>
